--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Node + Express + MongoDb example</h1>
+    <p id="text"></p>
     <button id="Yes-Button">YES</button>
     <button id="No-Button">NO</button>
   </body>
