--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Node + Express + MongoDb example</title>
+    <title>Jobs Data Base</title>
   </head>
   <body>
-    <h1>Node + Express + MongoDb example</h1>
+    <h1>Jobs Data Base</h1>
     <p id="text"></p>
+    <button id="Load-Button">LOAD JOBS</button>
     <button id="Yes-Button">YES</button>
     <button id="No-Button">NO</button>
   </body>
-  <script src="client.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script type="module" src="client.js"></script>
 </html>
