--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Jobs Data Base</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
   <body>
     <h1>Jobs Data Base</h1>
-    <p id="text"></p>
-    <button id="Load-Button">LOAD JOBS</button>
-    <button id="Yes-Button">YES</button>
-    <button id="No-Button">NO</button>
+        <style>
+      body {
+        background-color: #673AB7;
+        color: white;
+        font-size: 19px;
+        text-align: center;
+      }
+    </style>
+  </body>
+  <body>
+    <div id="text" style="width:1500px;height:575px;font-size:15px; font-family: Verdana, Geneva, 
+    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+  </body>
+  <body>
+    <div> 
+      <button id="Load-Button" style="font-size:30px; text-align: left;">LOAD JOBS</button>
+      <button id="Yes-Button"style="font-size:30px;">YES</button>
+      <button id="No-Button"style="font-size:30px;">NO</button>
+    </div>
   </body>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="module" src="client.js"></script>
