--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -17,7 +17,11 @@
     </style>
   </body>
   <body>
-    <div id="text" style="width:1500px;height:575px;font-size:15px; font-family: Verdana, Geneva, 
+    <div id="text" style="width:1500px;height:400px;font-size:15px; font-family: Verdana, Geneva, 
+    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+  </body>
+  <body>
+    <div id="experience" style="width:1500px;height:150px;font-size:15px; font-family: Verdana, Geneva, 
     Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
   </body>
   <body>
