box addeded to include info

--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -15,14 +15,26 @@
         text-align: center;
       }
     </style>
+    <div class="box" style="display: flex"> 
+      <div id="company" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+      <div id="location" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+    </div>
   </body>
   <body>
     <div id="text" style="width:1500px;height:400px;font-size:15px; font-family: Verdana, Geneva, 
-    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
-  </body>
+    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;
+    text-overflow: ellipsis;overflow: hidden;">LOAD JOBS!</div>
+  </body>  
   <body>
-    <div id="experience" style="width:1500px;height:150px;font-size:15px; font-family: Verdana, Geneva, 
-    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+    <div class="box" style="display: flex"> 
+      <div id="key_words" style="width:300px;height:125px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+      <div id="experience" style="width:1195px;height:125px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;text-overflow: ellipsis;
+      overflow: hidden;">LOAD JOBS!</div>
+    </div>
   </body>
   <body>
     <div> 
@@ -34,3 +46,4 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script type="module" src="client.js"></script>
 </html>
+
