--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -22,7 +22,7 @@
     </div>
   </body>
   <body>
-    <div id="text" style="width:1500px;height:450px;font-size:15px; font-family: Verdana, Geneva, 
+    <div id="text" style="width:1500px;height:400px;font-size:15px; font-family: Verdana, Geneva, 
     Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;
     text-overflow: ellipsis;overflow: hidden;">LOAD JOBS!</div>
   </body>  
@@ -30,11 +30,16 @@
     <div class="box" style="display: flex"> 
       <div id="key_words" style="width:200px;height:175px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
-      <div id="experience" style="width:1295px;height:172px;font-size:15px; font-family: Verdana, Geneva, 
+      <div id="experience" style="width:1295px;height:175px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;text-overflow: ellipsis;
       overflow: hidden;">LOAD JOBS!</div>
     </div>
   </body>
+  <body>
+    <div id="link" style="width:1500px;height:50px;font-size:15px; font-family: Verdana, Geneva, 
+    Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;
+    text-overflow: ellipsis;overflow: hidden;">LOAD JOBS!</div>
+  </body> 
   <body>
     <div> 
       <button id="Load-Button" style="font-size:30px; text-align: left;">LOAD JOBS</button>
