added changes to adapt to limitation of 30000 jobs to perform some tasks

--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -19,6 +19,8 @@
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
       <div id="location" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
+      <div id="job_id" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
     </div>
   </body>
   <body>
