--- a/src/nodejs/public/index.html
+++ b/src/nodejs/public/index.html
@@ -15,9 +15,11 @@
       }
     </style>
     <div class="box" style="display: flex"> 
+      <div id="title" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
+      Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
       <div id="company" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
-      <div id="location" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
+      <div id="location" style="width:500px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
       <div id="job_id" style="width:300px;height:25px;font-size:15px; font-family: Verdana, Geneva, 
       Tahoma, sans-serif;background-color: white; color: black;border:2px solid #000; text-align: left;">LOAD JOBS!</div>
